Fixed parallax issue on mobile view

--- a/style/main.css
+++ b/style/main.css
@@ -22,6 +22,7 @@ body{
 /*Navigation Bar*/
 .navbar{
     background-color: #212121;
+    box-shadow: 0px 3px 15px #212121;
     transition: all 0.5s;
 }
 
@@ -271,11 +272,18 @@ body{
 
 /*Contact Me*/
 .contact-me{
-    background-color: white;
-    padding: 30px;
+    background-image: url(../images/header_image.jpg);
+    height: 470px;
+    background-attachment: fixed;
+    background-position:center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .contact-me h3{
+    color: #fefefe;
     text-align: center;
     margin-bottom: 30px;
 }
@@ -283,11 +291,24 @@ body{
 .contact-me form{
     width: 50%;
     margin: auto;
+    color: #fefefe;
 }
 
 .contact-me textarea{
     resize: none;
     margin-bottom: 10px;
+}
+
+.submit-btn{
+    background-color: #212121;
+    transition: all 0.5s;
+    border: none;
+    box-shadow: 3px 3px 6px #777;
+}
+
+.submit-btn:hover{
+    background-color: #fff;
+    color: #212121;
 }
 
 
@@ -341,6 +362,11 @@ footer{
     
     .skill-item{
         
+    }
+    
+    .contact-me{
+        background-attachment: scroll;
+        height: 500px;
     }
     
 }
